gloo-edge/overlay/virtualservice/edge-demo/http-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: 'http-vs'
  namespace: 'gloo-system'
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
       - prefix: '/argo'
      routeAction:
        single:
          upstream:
            name: 'argocd-argocd-server-80'
            namespace: 'gloo-system'
      options:
        prefixRewrite: '/argo'
    - matchers:
       - prefix: '/keycloak/'
      routeAction:
        single:
          upstream:
            name: 'default-keycloak-8080'
            namespace: 'gloo-system'
      options:
        prefixRewrite: '/auth/'
    - matchers:
       - prefix: '/'
      routeAction:
        single:
          upstream:
            name: 'default-keycloak-8080'
            namespace: 'gloo-system'
